--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <nav>
         <ul>
-            <li><a href="#">Главная</a></li>
-            <li><a href="#">Обо мне:3</a></li>
+            <li><a href="https://mihailovtommy.github.io/drazzfsite/">Главная</a></li>
+            <li><a href="https://mihailovtommy.github.io/aboutmedarzzf/">Обо мне:3</a></li>
             <li><a href="https://www.donationalerts.com/r/drazzf">Поддержать меня</a></li>
             <li><a href="#">Связь со мной</a></li>
         </ul>
